--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ uvicorn==0.24.0
 python-dotenv==1.0.0
 jinja2
 authlib==1.2.1
-streamlit==1.28.2
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
